added shuffle and flip

--- a/index.html
+++ b/index.html
@@ -22,12 +22,21 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves">0 </span> Moves
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
+                <button class="reset">reset</button>
         	</div>
         </section>
+
+        <!--<div id="wonModal">
+            <div class="winnerStatement">
+                <span class="end"></span>
+                <p>You have won the Game!!!  Play Again?</p>
+                <button>Restart</button><button>Quit</button>
+        </div>
+        -->
 
         <ul class="deck">
            
